[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.0.0"
flask = "^1.1.2"
feedparser = "^6.0.2"
youtube-dl = "^2021.4.26"
twitchAPI = "^2.3.2"
"zc.lockfile" = "^2.0"
"discord.py" = "^1.7.3"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
